--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
         <title>Jake</title>
+        <link rel="stylesheet" href="css/home.css">
     </head>
     <body>
+    	<p>Your face!</p>
+    	<h1>Also your face</h1>
     </body>
 </html>
