--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <link rel="stylesheet" href="css/home.css">
     </head>
     <body>
-    
+    	<div class="header">
+    		<ul>
+    			<li>Home</li>
+    			<li>Projects</li>
+    			<li>Resume</li>
+    			
+    		</ul>
+    	</div>
     </body>
 </html>
